--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/personal-web"]
 	path = themes/personal-web
-	url = https://github.com/cymantic/personal-web.git
+	url = git@github.com/cymantic/personal-web.git
+
+[submodule "public"]
+	path = public
+	url = git@github.com/cymantic/cymantic.github.io.git
